## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at https://mozilla.org/MPL/2.0/.

## Copyright (c) 2016 David Jackson

AM_CFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libcymkd.la
libcymkd_la_SOURCES = cymkd.c

noinst_LIBRARIES = libcyjson.a
libcyjson_a_SOURCES = cyjson.c
