## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.

## Copyright (c) 2016-2020 David Jackson

dist_man1_MANS = cyto.1 cytogen.1 cymkd.1
dist_man3_MANS = cymkd.3
dist_man5_MANS = cyto_config.5
