# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# Copyright (c) 2016 David Jackson

bin_PROGRAMS = cyto
cyto_SOURCES = main.c layout.c cytoplasm_header.c string_util.c
cyto_LDADD = -lctache
