## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at https://mozilla.org/MPL/2.0/.

## Copyright (c) 2021 David Jackson

TESTS = run_tests.sh

check_PROGRAMS = run_tests.sh

run_tests_sh_SOURCES = run_tests.sh
